interval, rules, api